--- a/pom.xml
+++ b/pom.xml
@@ -33,16 +33,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>			<!-- Spring Boot Starter Data JPA -->
+		</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-data-jpa</artifactId>
 			</dependency>
 
-			<!-- PostgreSQL Driver -->
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
+				<version>42.5.4</version>
 			</dependency>
 
 		<dependency>
